--- a/resources/css/jumbotron.css
+++ b/resources/css/jumbotron.css
@@ -7,7 +7,7 @@ body {
     background-color: rgb(255, 255, 255);
     text-align: center;
     border: 70px solid transparent;
-    border-image: url("../../public/storage/imagem/rodapecarol.png") 150 round;
+    border-image: url("../../public/storage/img/rodape.png") 150 round;
   }
 
 .font{
@@ -20,6 +20,6 @@ h2{
   border-color: aliceblue;
 }
 main{
-  border-style: dotted;
-  border-color:#d0ab7a;
+  border-style:dashed;
+  border-color:maroon;
 }
