--- a/resources/css/jumbotron.css
+++ b/resources/css/jumbotron.css
@@ -15,11 +15,11 @@ body {
 }
 
 h2{
-  background-color:#d0ab7a;
+  background-color:#f7cf90;
   border-style:dotted;
   border-color: aliceblue;
 }
 main{
   border-style:dashed;
-  border-color:maroon;
+  border-color:#e0b848;
 }
